# Phy-Engine

./: .gitignore  LICENSE.md  README.md  README_CN.md  tmp_mul8u_shiftadd.v  xmake.lua
benchmark/: CMakeLists.txt  README.md  series_parallel.cpp
benchmark/0001.models/: 100000000xR.cpp  1000000xR.cpp  1000000xR_cuda_efficiency.cu  100000_random_links_compare.cu  100000_random_links_cpu.cpp  100000_random_links_cuda.cu  100000xR.cpp
src/: CMakeLists.txt  README.md  dll_main.cpp  pe_synth_cuda_u64_cones.cu  verilog2penl.cpp  verilog2plsav  verilog2plsav.cpp
src/PEmain/: main.cpp
src/phy_engine/: main.cpp
src/phy_engine_file_format/: file_format.h  file_loader.h  impl.h
src/phy_engine_netlist/: .netlist.h.swp  concept.h  netlist.h  operation.h
test/: CMakeLists.txt  xmake.lua
test/0001.module/: concept.cpp
test/0002.net_list/: operations.cpp
test/0003.circuits/: operations.cpp
test/0004.solver/: ac.cpp  bsim3v32_cjswd_tr_enable.cpp  bsim3v32_dc.cpp  bsim3v32_diode_alias_is_n_dc.cpp  bsim3v32_diode_breakdown_dc.cpp  bsim3v32_diode_breakdown_js_area_scale_dc.cpp  bsim3v32_diode_breakdown_scale_m_dc.cpp  bsim3v32_diode_bv_ibv_alias_dc.cpp  bsim3v32_diode_isd_iss_dc.cpp  bsim3v32_diode_isr_temp_dc.cpp  bsim3v32_diode_isrd_isrs_dc.cpp  bsim3v32_diode_nd_ns_dc.cpp  bsim3v32_diode_recombination_dc.cpp  bsim3v32_diode_temp_dc.cpp  bsim3v32_diode_tt_tr.cpp  bsim3v32_dtemp_dc.cpp  bsim3v32_exact_aliases_smoke.cpp  bsim3v32_gate_leak_fallback_dc.cpp  bsim3v32_gate_leak_temp_dc.cpp  bsim3v32_gidl_dc.cpp  bsim3v32_gidl_temp_dc.cpp  bsim3v32_igb_dc.cpp  bsim3v32_igs_igd_dc.cpp  bsim3v32_impact_ionization_dc.cpp  bsim3v32_impact_ionization_temp_dc.cpp  bsim3v32_instance_temp_override_dc.cpp  bsim3v32_jsd_jss_dc.cpp  bsim3v32_jsr_dc.cpp  bsim3v32_jsrd_jsrs_dc.cpp  bsim3v32_jsrwd_jsrws_dc.cpp  bsim3v32_jsrwgd_jsrwgs_dc.cpp  bsim3v32_jswd_jsws_dc.cpp  bsim3v32_jswg_dc.cpp  bsim3v32_jswgd_jswgs_dc.cpp  bsim3v32_ldvt0_lwscale_dc.cpp  bsim3v32_leta0_lwscale_dc.cpp  bsim3v32_lgamma_lwscale_dc.cpp  bsim3v32_lk1_lwscale_dc.cpp  bsim3v32_lnch_lwscale_dc.cpp  bsim3v32_lnfactor_lwscale_dc.cpp  (+40 more)
test/0005.models/: 100000000xR.cpp  100000xR.cpp  10000xR.cpp  2xVDC.cpp  capacitor.cpp  capacitor_TR.cpp  cccs_dc.cpp  ccvs_dc.cpp  coupled_inductors_TR.cpp  cutthrough.cpp  generator_dc.cpp  inductor.cpp  inductor_TR.cpp  op_amp_follower.cpp  pn_junction_forward.cpp  rc_step_tr.cpp  relay_hysteresis.cpp  rl_step_tr.cpp  series_parallel.cpp  switch.cpp  switch_r_open.cpp  transformer_center_tap_ratio.cpp  transformer_ratio.cpp  vccs_dc.cpp  vcvs_follower.cpp  vcvs_gain.cpp
test/0006.digital/: comparator_digital_clk.cpp  digital.cpp  digital_blocks_smoke.cpp  hybirds.cpp
test/0007.verilog/: parse.cpp  pe_synth_sv_syntax_stress.cpp  pe_sys_urandom4.cpp  pe_vector_shift_sticky.cpp  pretreatment_table.cpp  sim_always_case.cpp  sim_always_ff_blocking_rejected.cpp  sim_always_ff_level_event_rejected.cpp  sim_always_sensitivity.cpp  sim_and2.cpp  sim_ansi_port_logic_keyword.cpp  sim_ansi_port_wire_keyword.cpp  sim_blocking_vector_assign_atomic.cpp  sim_break_continue_compound.cpp  sim_concat.cpp  sim_continuous_lhs_assignments.cpp  sim_delay.cpp  sim_do_while_decl_init.cpp  sim_edge_cases.cpp  sim_expr_new_ops.cpp  sim_fp8_e5m2_adder_compile.cpp  sim_function_decl_init_unscoped.cpp  sim_function_return.cpp  sim_function_return_expr_stmt.cpp  sim_function_task.cpp  sim_generate_for.cpp  sim_hierarchical_inst_port.cpp  sim_index_arith.cpp  sim_indexed_part_select.cpp  sim_initial_always_latch_unique.cpp  sim_initial_delay_chain.cpp  sim_instantiation.cpp  sim_instantiation_concat_conn.cpp  sim_instantiation_slice_conn.cpp  sim_instantiation_vector_literal.cpp  sim_integral_types_byte_shortint_longint_bit.cpp  sim_lhs_dynamic_bitselect.cpp  sim_lhs_indexed_part_select.cpp  sim_module_decl_init.cpp  sim_module_packed_int_decl_init.cpp  (+23 more)
test/0008.dll/: dll_main_model_coverage.cpp  dll_main_smoke.cpp  dll_main_verilog_module.cpp  dll_main_verilog_netlist.cpp  dll_main_verilog_netlist_async_reset.cpp  dll_main_verilog_netlist_dff.cpp  dll_main_verilog_netlist_inout_multi_driver.cpp  dll_main_verilog_netlist_multi_driver.cpp
test/0008.numerical_methods/: compare_trapezoidal_vs_backward_euler.cpp
test/0009.lib/: lib.cpp  phy_lab_wrapper_smoke.cpp
test/0010.floating_subnet/: detect.cpp
test/0011.nonlinear/: op_pn_junction.cpp  pn_prepare_idempotent.cpp
test/0012.ac/: ac_omega.cpp  bsim3v32_ac_smoke.cpp  bsim3v32_accum_ac.cpp  bsim3v32_acm_overlap_ac.cpp  bsim3v32_acm_overlap_capmod1_ac.cpp  bsim3v32_acop_smoke.cpp  bsim3v32_capmod1_uses_meyer_ac.cpp  bsim3v32_capmod1_vfbcv_bulk_ac.cpp  bsim3v32_capmod_cutoff_ac.cpp  bsim3v32_capmod_vdsat_continuity.cpp  bsim3v32_capmod_vfbcv_bulk_ac.cpp  bsim3v32_capmod_voff_bulk_ac.cpp  bsim3v32_capmod_voffcv_bulk_ac.cpp  bsim3v32_cjd_cjs_pbd_pbs_ac.cpp  bsim3v32_cjswd_cjsws_pbswd_pbsws_ac.cpp  bsim3v32_cmatrix_charge_conservation.cpp  bsim3v32_diode_tt_ac.cpp  bsim3v32_diode_ttd_tts_ac.cpp  bsim3v32_fcd_fcs_ac.cpp  bsim3v32_gds_zero_vds_ac.cpp  bsim3v32_igd_ac.cpp  bsim3v32_igs_ac.cpp  bsim3v32_junc_area_alias_ac.cpp  bsim3v32_junc_pbsw_ac.cpp  bsim3v32_junc_pbswg_ac.cpp  bsim3v32_junc_tcj_ac.cpp  bsim3v32_k2_affects_bulk_ac.cpp  bsim3v32_mjd_mjs_ac.cpp  bsim3v32_pmos_capmod_cutoff_ac.cpp  bsim3v32_rgate_ac.cpp  bsim3v32_voff_no_ac_effect_when_voffcv_set_ac.cpp  bsim3v32_w_l_capmod_alias_ac.cpp  bsim3v32_xpart_continuous_ac.cpp  bsim3v32_xpart_saturation_ac.cpp  pn_junction_tt_ac.cpp
test/0013.cuda/: cuda_random_links_correctness.cu  pe_synth_cuda_u64_cones_correctness.cu
test/0014.phy_lab_wrapper/: auto_layout_smoke.cpp  pe_to_pl_all_digital_models_smoke.cpp  pe_to_pl_pinmap_full_adder.cpp  pe_to_pl_pinmap_mul2.cpp  pe_to_pl_reject_verilog_models.cpp  pe_to_pl_smoke.cpp  pl_pe_counter_smoke.cpp  pl_pe_random_generator_smoke.cpp  pl_pe_sim_smoke.cpp
test/0015.verilog_compile/: README.md  pe_synth_absorption.cpp  pe_synth_adders_o3_interaction.cpp  pe_synth_always_comb_mux.cpp  pe_synth_and2.cpp  pe_synth_async_reset.cpp  pe_synth_async_reset_expr_multi_event.cpp  (+48 more)
(+422 files in other folders)
